Fix: correcting internal spacing in inputs

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ h1 {
     margin-top: 31px;
 }
 
-.data-group input {
+.container-input input {
     border: 2px solid #AAAAAA;
     border-radius: 4px;
     padding: 11px 0 11px 12px;
